--- a/src/Test.Blazor/Test.Blazor.csproj
+++ b/src/Test.Blazor/Test.Blazor.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -14,6 +14,7 @@
   <ItemGroup>
     <PackageReference Include="Blazorise.Bootstrap" Version="0.9.3.4" />
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.3.4" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.5" />    
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
   </ItemGroup>
@@ -23,6 +24,8 @@
     <ProjectReference Include="..\Test.HttpApi\Test.HttpApi.csproj" />
     <ProjectReference Include="..\Test.MongoDB\Test.MongoDB.csproj" />
     <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="4.3.0-rc.2" />
+    <PackageReference Include="Volo.Abp.AspNetCore.SignalR" Version="4.3.0-rc.2" />
+    <PackageReference Include="Volo.Abp.AspNetCore.MultiTenancy" Version="4.3.0-rc.2" />
     <PackageReference Include="Volo.Abp.Autofac" Version="4.3.0-rc.2" />
     <PackageReference Include="Volo.Abp.Swashbuckle" Version="4.3.0-rc.2" />
     <PackageReference Include="Volo.Abp.AspNetCore.Authentication.JwtBearer" Version="4.3.0-rc.2" />
